Remove -XX:+ZGenerational from all JVM configs, bump CI benchmark timeout
- build.sbt Test/javaOptions: remove ZGenerational (default since JDK 24)
- FairBenchmarkBase @Fork: remove ZGenerational from jvmArgsAppend
- MatrixBenchmarkBase @Fork: remove ZGenerational from jvmArgsAppend
- CI benchmark timeout: 8m → 12m for PR quick mode (5 suites need ~10m)