@@ -216,8 +216,7 @@ lazy val eruRuntime = crossProject(JVMPlatform, NativePlatform)
     Test / testForkedParallel := false,
     Test / fork := true,
     Test / javaOptions ++= Seq(
-      "-XX:+UseZGC", // Enable ZGC (optimal for Project Loom)
-      "-XX:+ZGenerational", // Generational mode (default in JDK 23+, explicit for JDK 21)
+      "-XX:+UseZGC", // ZGC (generational mode is default since JDK 24)
       "-Xms2G", // Initial heap size
       "-Xmx2G", // Max heap size
       "-Djava.util.concurrent.ForkJoinPool.common.parallelism=4"
